2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* cows.png:
	* eggs.png:
	* mice.png:
	* windows.png: Moved these themes to the gnome-games-extra-data
	package.
	
2004-07-20  Christian Neumair  <chris@gnome-de.org>

	* graphics.c (load_bubble_graphic): Assimilate gettextized warning to
	other ones.

2004-07-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Convert the keyboard control list to Paolo's
	games_controls_list.

2004-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c:
	* game.h:
	* cursors.c:
	* cursors.h:	
	* gnobots.c: Provide cursor hints to show which way clicking the
	mouse will take you.

2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* teleport.png:
	* rteleport.png:
	* menu.c: Add custom menu icons for teleport and rteleport.

2004-06-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: 
	* menu.h:	
	* menu.c: Add menu items and a toolbar for the commands like
	teleport, wait, etc. Also includes logic to correctly set
	sensitivity.

2004-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c:	
	* game.c: Add basic mouse support. You can successfully play the
	game with the mouse, but there is no guide as to what direction
	will be used yet. Also, you can click at the title screen to start
	a new game.

2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Fix compiler warnings.

2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Update the version since it is still
	accurate.

2004-02-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/it/.cvsignore: Making it correct.

2004-02-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/Makefile.am:
	* help/it/gnobots2.xml:
	* help/it/gnobots2-it.omf:
	* help/it/legal.xml:
	* help/it/Makefile.am: Restored the old Italian documentation.

2004-02-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c (show_properties_dialog): Typo. Fixes bug #134442.
