@@ -1,3 +1,8 @@
+2004-09-09  callum  <callum@spooky-possum.org>
+
+	* help/C/figures/gnobots2-main.png:
+	* help/C/gnobots2.xml: Updates for 2.8.
+
 2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* cows.png:
